# awsctx

./: .gitignore  README.md  pyproject.toml
src/awsctx/: __init__.py  cli.py  config.py  picker.py  shell.py
